--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>MMP</h1>
+                <h1>ERG</h1>
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,9 +23,9 @@
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>Global Consulting Company</h1>
-            <p>We help businesses grow and reach their goals</p>
-            <a href="#services" class="btn">Learn More</a>
+            <h1>Efficient and Reliable Gas Transportation</h1>
+            <p>Safe Delivery of Gas to Your Doorstep</p>
+            <a href="#services" class="btn">Get a Quote</a>
         </div>
     </header>
     <main>
@@ -34,39 +34,61 @@
             <div class="services-container">
                 <div class="service">
                     <i class="fas fa-chart-line"></i>
-                    <h3>Market Analysis</h3>
-                    <p>We provide in-depth market analysis to help businesses make informed decisions.</p>
+                    <h3>On-time delivery</h3>
+                    <p>We emphasize the company's ability to deliver gas on time and within the agreed-upon time frame,
+                        ensuring that customers receive their deliveries as expected.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-globe-americas"></i>
-                    <h3>Global Expansion</h3>
-                    <p>We help businesses expand globally and navigate cultural differences.</p>
+                    <h3>Wide coverage area</h3>
+                    <p>We deliver the different types of gases that the company is capable of transporting, such as LPG,
+                        compressed natural gas (CNG), and liquefied natural gas (LNG).</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-handshake"></i>
-                    <h3>Partnerships</h3>
-                    <p>We assist businesses in forming partnerships and collaborations for growth.</p>
+                    <h3>Experienced and certified drivers</h3>
+                    <p>We are introducing the company's experienced team of professionals who are dedicated to providing
+                        the highest level of service and support to customers.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-handshake"></i>
+                    <h3>Safe and secure transport</h3>
+                    <p>We Highlight the company's commitment to providing reliable and efficient transport services for
+                        all types of gases.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-handshake"></i>
+                    <h3>Affordable prices</h3>
+                    <p>We Highlight the company's competitive pricing structure and the cost-effective solutions it
+                        offers to its customers.</p>
                 </div>
             </div>
         </section>
         <section id="about">
             <h2>About Us</h2>
-            <p>MMP Global Consulting Company is a team of experts dedicated to helping businesses grow and reach their
-                goals. With a focus on market analysis, global expansion, and partnerships, we provide a comprehensive
-                solution to help businesses succeed in today's competitive market.</p>
+            <p>Welcome to ERG, a leading provider of gas transportation services. We are committed to delivering safe,
+                reliable, and efficient gas transportation solutions to meet the needs of our clients.
+
+                Our mission is to provide our clients with the highest quality of service in the industry. We understand
+                the importance of having a dependable source of energy and that's why we strive to ensure that the gas
+                transport process is smooth and efficient.
+
+                With years of experience in the gas transport industry, we have built a reputation for delivering
+                outstanding customer service and quality results. Our team of experts is knowledgeable, friendly, and
+                dedicated to helping our clients find the right gas transportation solution to meet their needs.
+
+                At [Gas Transport Company Name], we are proud of our commitment to safety, which is reflected in our
+                strict adherence to industry standards and regulations. We use the latest technology and equipment to
+                ensure that all of our operations are conducted safely and efficiently.
+
+                If you're in need of gas transportation services, look no further than [Gas Transport Company Name]. We
+                are here to provide you with the best possible service, and to help you get the energy you need to power
+                your business or home. Contact us today to learn more about our services and how we can help you.</p>
         </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <form action="submit-form.php" method="post">
-                <input type="text" name="name" placeholder="Name">
-                <input type="email" name="email" placeholder="Email">
-                <textarea name="message" placeholder="Message"></textarea>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+
     </main>
     <footer>
-        <p>&copy; MMP Global Consulting Company 2023</p>
+        <p>&copy; ERG Gas Transportation Company 2023</p>
     </footer>
     <script src="script.js"></script>
 </body>
